[gd_scene load_steps=5 format=3 uid="uid://bol73niivbu4p"]

[ext_resource type="PackedScene" uid="uid://dkxqj3l0xm8uw" path="res://creator/selection/inspector/categories/inspector_category_base.tscn" id="1_4msn7"]
[ext_resource type="Script" path="res://creator/selection/inspector/categories/inspector_light.gd" id="2_iyv5o"]
[ext_resource type="PackedScene" uid="uid://yl2tfblvbyak" path="res://creator/selection/inspector/primitive/inspector_number_field.tscn" id="3_ksblj"]
[ext_resource type="PackedScene" uid="uid://cv5dw53tu538o" path="res://creator/selection/inspector/primitive/inspector_color.tscn" id="4_qg8w3"]

[node name="InspectorLight" instance=ExtResource("1_4msn7")]
script = ExtResource("2_iyv5o")

[node name="Text" parent="CategoryTitle/ToggleButton/Name" index="3"]
text = "LIGHT"

[node name="LightRange" parent="Properties/MarginContainer/PropertyList" index="0" instance=ExtResource("3_ksblj")]
layout_mode = 2
reset_value = 10.0
current_value = 10.0
label_text = "Range"

[node name="SpotAngle" parent="Properties/MarginContainer/PropertyList" index="1" instance=ExtResource("3_ksblj")]
layout_mode = 2
reset_value = 45.0
current_value = 45.0
label_text = "Spot Angle"

[node name="LightColor" parent="Properties/MarginContainer/PropertyList" index="2" instance=ExtResource("4_qg8w3")]
layout_mode = 2
label_text = "Color"

[node name="Brightness" parent="Properties/MarginContainer/PropertyList" index="3" instance=ExtResource("3_ksblj")]
layout_mode = 2
reset_value = 1.0
current_value = 1.0
label_text = "Brightness"

[connection signal="value_changed" from="Properties/MarginContainer/PropertyList/LightRange" to="." method="_on_light_range_value_changed"]
[connection signal="value_changed" from="Properties/MarginContainer/PropertyList/SpotAngle" to="." method="_on_spot_angle_value_changed"]
[connection signal="value_changed" from="Properties/MarginContainer/PropertyList/LightColor" to="." method="_on_light_color_value_changed"]
[connection signal="value_changed" from="Properties/MarginContainer/PropertyList/Brightness" to="." method="_on_brightness_value_changed"]
